--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ header{
 .menuscroll{
   margin-top: 0px;
 }
+/* footer{
+  height: 300px;
+  background-color: grey;
+} */
 
 
 .logo{
@@ -97,7 +101,7 @@ box-shadow: 2px 4px 13px -6px rgba(0,0,0,0.75);
 .quarterboxright{width: 42%;  float: right; background-color: rgb(81, 146, 232);)
 }
 .contentboxgrey{
-background-color: #f5f6fa;
+background-color: #d7d7d7;
 width: 100%;
 height: 400px;
 display: flex;
@@ -110,6 +114,32 @@ display: flex;
 flex-wrap: wrap;
 
 }
+footer{
+  background-color: #d7d7d7;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  float: left;
+}
+.block{
+  margin: 3rem 5rem;
+  width: 50%;
+  height: 8%;
+  border-bottom: 1px solid #F15C5C;
+
+}
+.contact1{
+  font-size: 26px;
+  color: #adadad;
+  font-weight: bold;
+}
+.contact2{
+  margin-left: 5px;
+  font-size: 26px;
+  color: #cb1212;
+  font-weight: bold;
+}
+
 .paralax{
   background-image: url("img/servers.jpg");
   background-attachment: fixed;
