added mobile menu

--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@ html, body {
 }
 
 header {
-  background-image: url('img/servers.jpg');
+  background:
+  linear-gradient(
+         rgba(0, 0, 0, 0.6),
+         rgba(0, 0, 0, 0.6)
+       ),
+   url('img/servers.jpg');
   background-attachment: fixed;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -38,15 +43,19 @@ header {
 /* flex-wrap: wrap; */
 
 .menu {
-  float: right;
+
+
   right: 0;
-  padding: 10px;
   text-transform: uppercase;
   border: 0;
   font-size: 15px;
-  margin-right: 20%;
+
   transition-duration: 0.5s;
-  margin-top: 1%;
+        background-color: rgba(255, 255, 255, 0.93);
+        -webkit-box-shadow: 0px 4px 13px -6px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 4px 13px -6px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 4px 13px -6px rgba(0, 0, 0, 0.75);
+
 }
 
 .menuscroll {
@@ -87,13 +96,14 @@ h3 {
 }
 
 .logo {
+
   height: 80px;
   width: 150px;
   background-image: url("img/Logo.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
-  margin-top: 1%;
+
   margin-left: 10em;
   transition-duration: 0.5s;
 }
@@ -104,12 +114,16 @@ h3 {
   width: 120px;
 }
 
-.menu-link {
-  padding: 0.75em 0;
+.menu-link {display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
   letter-spacing: 1px;
   list-style: none;
-  padding: 0.75em;
-  float: right;
+
+
 }
 
 h1 {
@@ -119,7 +133,7 @@ h1 {
 
 .fullboxmeu {
   width: 100%;
-  height: 80px;
+  height:80px;
   position: fixed;
   background-color: rgba(255, 255, 255, 0.70);
   z-index: 1;
@@ -173,7 +187,8 @@ h1 {
 }
 
 .logobox {
-  float: left;
+   z-index: 100;
+
 }
 
 .quarterboxright {
@@ -291,7 +306,12 @@ footer p {
   flex-direction: row;
 }
 
+@media screen and (max-width: 2000px) {
+
+}
+
 .h2, h2 {
+
   font-size: 1.5rem;
   text-align: left;
 }
@@ -312,11 +332,15 @@ footer p {
 }
 
 #navigation ul li {
+
   display: inline-block;
+
 }
 
 #navigation ul li a {
-  font-size: 110%;
+
+
+      margin-top: 1rem;
   font-weight: bold;
   padding: 0 10px;
   color: #2b2b2b;
@@ -346,10 +370,3 @@ footer p {
   font-family: 'Open Sans', sans-serif;
   color: #5f5f61;
 }
-
-/* ul {
-    list-style-image: url('img/resize.png');
-}
-li{
-        padding-bottom: 0;
-} */
