--- a/progressbar.css
+++ b/progressbar.css
@@ -5,12 +5,22 @@
   color: red;
 }
 
+#example-1 p {
+    margin-bottom: 4px;
+}
+#example-1 span {
+
+    color: white;
+}
+
+
 
 .cssProgress {
   width: 100%;
   margin-bottom: 20px;
 }
 .cssProgress .progress1 {
+
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -20,7 +30,7 @@
   display: block;
   float: left;
   width: 0%;
-  height: 100%;
+  height: 20px;
   background: #3798d9;
   box-shadow: inset 0px -1px 2px rgba(0, 0, 0, 0.1);
   transition: width 0.8s ease-in-out;
@@ -30,9 +40,9 @@
   margin-left: 90%;
   overflow: hidden;
   color: rgba(0, 0, 0, 0.6);
-  font-size: 0.7em;
+  font-size: 0.9em;
   text-align: center;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -42,8 +52,8 @@
 
 
 .progress1.cssProgress-bar .cssProgress-bar {
-  height: 18px;
+  height: 15px;
 }
 .progress1.cssProgress-bar .cssProgress-label {
-  line-height: 18px;
+  line-height: 15px;
 }
