--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html, body {
   margin: 0;
   padding: 0;
   min-width: 100%;
+  color:   rgb(68, 68, 68);
+font-family: 'Open Sans', sans-serif;
 }
 
 header {
@@ -80,8 +82,56 @@ p {
 } */
 
 h3 {font-family: 'Roboto Condensed', sans-serif;
+    font-size:1.75rem;
   text-align: left;
-  margin-bottom: 2rem;
+
+  margin-bottom: 1.75rem;
+  transform: scaleY(1.2);
+    color:   rgb(68, 68, 68);
+}
+
+h2 {
+  font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.75rem;
+  text-align: center;
+
+  margin-bottom: 1.5rem;
+  transform: scaleY(1.2);
+}
+
+a:hover{
+
+    text-decoration: none;
+}
+
+
+h1 {
+
+  text-decoration: none;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1.1rem;
+        margin-bottom: 1rem;
+}
+/* #3798d9 */
+.col-sm a:hover{
+  color: #3798d9;
+}
+
+.col-sm a{
+    color:   rgb(68, 68, 68);
+
+}
+.col-sm p{
+    text-align: center;
+
+}
+
+.under-text{
+  font-size: 1.1rem;
+text-align: center;
+margin-bottom: 50px;
 }
 
 .logo {
@@ -111,10 +161,6 @@ h3 {font-family: 'Roboto Condensed', sans-serif;
   list-style: none;
 }
 
-h1 {
-  font-size: 2em;
-  color: black;
-}
 
 .fullboxmeu {
   width: 100%;
@@ -149,7 +195,7 @@ h1 {
 .halfbox {
   width: 50%;
   height: 100px;
-  )
+
 }
 
 .halboxleft {
@@ -183,23 +229,25 @@ h1 {
 }
 
 .contentboxgrey {
+
   width: 100%;
-  height: 400px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(250, 250, 250);
+  background-color: #eaeaea;
 }
 
 .contentboxwhite {
+
   width: 100%;
-  height: 450px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
 }
 
 .contentboxwhite2 {
   margin-top: 5%;
-  margin-bottom: 5%;
+
   width: 100%;
   height: auto;
   display: flex;
@@ -249,17 +297,23 @@ footer p {
 }
 
 .icon {
-  height: 60px;
-  width: 60px;
+  display: block;
+   margin-left: auto;
+   margin-right: auto;
+  height: 50px;
+  width: 50px;
   background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* margin: 0 auto; */
   margin-bottom: 10%;
+
 }
 
 .service {
+
   background-image: url("img/icon/customer-service.png");
+
 }
 
 .linechart {
@@ -281,10 +335,7 @@ footer p {
 
 @media screen and (max-width: 2000px) {}
 
-.h2, h2 {
-  font-size: 1.5rem;
-  text-align: left;
-}
+
 
 .margintop {
   margin-top: 30px;
@@ -292,6 +343,8 @@ footer p {
 
 .container {
   margin: auto;
+  margin-top: 3%;
+    margin-bottom:  3%;
   padding: auto;
 }
 
