--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ html, body {
   margin: 0;
   padding: 0;
   min-width: 100%;
-  color:   rgb(68, 68, 68);
-font-family: 'Open Sans', sans-serif;
+  color: rgb(68, 68, 68);
+
+    font-family: 'Open Sans', sans-serif;
 }
 
 header {
@@ -73,65 +74,116 @@ p {
   margin-bottom: 4rem;
 }
 
+.container {
+  min-width: 95%;
+}
+
 #section2 .row {
   margin-top: 4rem;
 }
 
-/* #section3 .contentboxgrey{
-  height: auto;
-} */
+.container-mrgin {
+  margin-left: 15%;
+  margin-right: 15%;
+}
 
-h3 {font-family: 'Roboto Condensed', sans-serif;
-    font-size:1.75rem;
+h3 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.75rem;
   text-align: left;
-
   margin-bottom: 1.75rem;
   transform: scaleY(1.2);
-    color:   rgb(68, 68, 68);
+  color: rgb(68, 68, 68);
 }
 
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
-    font-size: 1.75rem;
+  font-size:2rem;
   text-align: center;
 
   margin-bottom: 1.5rem;
-  transform: scaleY(1.2);
+  letter-spacing: 1px;
 }
 
-a:hover{
-
-    text-decoration: none;
+.thumb {
+  float: left;
+  font-size: 46px;
+  color: #3798d9;
+  text-align: center;
+  width: 60px;
+  font-size: 2.9rem;
 }
 
+a:hover {
+  text-decoration: none;
+}
 
 h1 {
-
+  transform: scaleY(1.2);
   text-decoration: none;
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
-  font-size: 1.1rem;
-        margin-bottom: 1rem;
+  font-size: 1rem;
+  margin-bottom: 1rem;
 }
-/* #3798d9 */
-.col-sm a:hover{
+
+h4 {
+
+  font-family: 'Roboto Condensed', sans-serif;
+  padding-top: 5px;
+  padding-left: 80px;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: left;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.col-sm a:hover {
   color: #3798d9;
 }
 
-.col-sm a{
-    color:   rgb(68, 68, 68);
-
-}
-.col-sm p{
-    text-align: center;
-
+.col-sm a {
+  color: rgb(68, 68, 68);
 }
 
-.under-text{
+.col-sm p {
+  text-align: center;
+}
+
+.different-img {
+  min-height: 300px;
+  width: 50%;
+  background-image: url("img/hands.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.diffrent-text {
+  padding-left: 80px;
+  padding-right: 20px;
+}
+
+.under-text {
+  animation-delay: 0.4s;
   font-size: 1.1rem;
-text-align: center;
-margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.under-text-small-icon {
+  animation-delay: 0.4s;
+  font-size: 3.8rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.thumb-text {
+  animation-duration: 0.4s;
+  animation-delay: 600ms;
+  padding-bottom: 20px;
 }
 
 .logo {
@@ -160,7 +212,6 @@ margin-bottom: 50px;
   letter-spacing: 1px;
   list-style: none;
 }
-
 
 .fullboxmeu {
   width: 100%;
@@ -195,7 +246,6 @@ margin-bottom: 50px;
 .halfbox {
   width: 50%;
   height: 100px;
-
 }
 
 .halboxleft {
@@ -229,7 +279,6 @@ margin-bottom: 50px;
 }
 
 .contentboxgrey {
-
   width: 100%;
   height: auto;
   display: flex;
@@ -237,8 +286,14 @@ margin-bottom: 50px;
   background-color: #eaeaea;
 }
 
-.contentboxwhite {
+.contentboxgreyhands {
+  width: 100%;
+  height: auto;
+  flex-wrap: wrap;
+  background-color: #eaeaea;
+}
 
+.contentboxwhite {
   width: 100%;
   height: auto;
   display: flex;
@@ -247,11 +302,19 @@ margin-bottom: 50px;
 
 .contentboxwhite2 {
   margin-top: 5%;
-
   width: 100%;
   height: auto;
   display: flex;
   flex-wrap: wrap;
+}
+
+.content-box-empty {
+  color: white;
+  width: 100%;
+  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/parallax.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
 footer {
@@ -298,8 +361,8 @@ footer p {
 
 .icon {
   display: block;
-   margin-left: auto;
-   margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   height: 50px;
   width: 50px;
   background-position: top;
@@ -307,13 +370,56 @@ footer p {
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 10%;
+}
+
+.icon-small {
+
+  font-size: 1.5rem;
+  text-align: center;
+      position: relative;
+}
+
+.icon-small::before{
+  content: "";
+  position: absolute;
+  right: 55%;
+  height: 2px;
+  width: 55px;
+  background: #3798d9;
+  top: 50%;
+
+  margin-right: 10px;
+}
+
+.icon-small::after{
+  content: "";
+  position: absolute;
+  left: 55%;
+  height: 2px;
+  width: 55px;
+  background: #3798d9;
+  top: 50%;
+
+  margin-left: 10px;
+}
+.padding-bottom{
+  padding-bottom: 5%;
+}
+
+.odometer-text {
+    transform: scaleY(1.1);
+    letter-spacing: 1px;
+  font-size: 1rem;
+font-weight: 700;
+font-family: 'Open Sans', sans-serif;
+  margin-top: 15px;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
 
 }
 
 .service {
-
   background-image: url("img/icon/customer-service.png");
-
 }
 
 .linechart {
@@ -335,8 +441,6 @@ footer p {
 
 @media screen and (max-width: 2000px) {}
 
-
-
 .margintop {
   margin-top: 30px;
 }
@@ -344,7 +448,18 @@ footer p {
 .container {
   margin: auto;
   margin-top: 3%;
-    margin-bottom:  3%;
+  margin-bottom: 3%;
+  padding: auto;
+}
+
+.container-image {
+  margin: auto;
+  padding-top: 3%;
+  padding: auto;
+}
+
+.container-transparent {
+  margin: auto;
   padding: auto;
 }
 
@@ -383,10 +498,10 @@ footer p {
   font-weight: 400;
 }
 
-#ff9900
-#about p {
+#ff9900 #about p {
   margin-bottom: 1%;
 }
+
 #about b {
   color: #ff9900;
 }
