--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,13 @@ h5 {
   .container-menu {
     width: 1200px;
   }
+
+  ul.topnav {
+    transition-duration: 0.6s;
+    display: block !important;
+    height: 0px;
+        overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -150,6 +157,10 @@ h5 {
     border-top: 2px solid rgba(203, 18, 18, .8);
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
+  }
+  ul.topnav {
+    display: flex;
+    overflow: hidden;
   }
   .logobox {
     padding-left: 5% !important;
@@ -183,17 +194,31 @@ h5 {
     width: 100%;
     position: relative;
   }
+
+
 }
 
 @media screen and (max-width: 970px) {
   ul.topnav.responsive {
-          transition-duration: 0.6s;
+    transition-duration: 0.6s;
     display: block !important;
+    height: 300px;
   }
   ul.topnav {
-        transition-duration: 0.6s;
-    display: none !important;
-    overflow: hidden;
+    transition-duration: 0.6s;
+    display: block !important;
+    height: 0px;
+  }
+  ul.topnav li {
+    -webkit-transition-property: height;
+    /* Safari */
+    -webkit-transition-duration: 0.6s;
+    /* Safari */
+    transition-property: height;
+    transition-duration: 0.6s;
+    height: 50px;
+    width: 100%;
+    position: relative;
   }
   ul.topnav.responsive li {
     -webkit-transition-property: height;
@@ -206,12 +231,6 @@ h5 {
     width: 100%;
     position: relative;
   }
-
-}
-
-ul.topnav {
-  display: flex;
-  overflow: hidden;
 }
 
 ul.topnav li {
@@ -231,7 +250,6 @@ ul.topnav li a {
   color: white;
   text-align: center;
   justify-content: center;
-  /* padding: 14px 16px; */
   text-decoration: none;
 }
 
@@ -269,7 +287,7 @@ ul.topnav li a {
 .container {
   margin: auto;
   margin-top: 3%;
-  margin-bottom: 3%;
+  padding-bottom: 3%;
   padding: auto;
 }
 
@@ -424,6 +442,8 @@ ul.topnav li a {
   color: rgb(217, 29, 21);
   transition: .3s;
 }
+
+
 
 #navigation ul li {
   display: inline-block;
@@ -671,7 +691,7 @@ ul.topnav li a {
 @media screen and (max-width: 960px) {
   .parent {
     width: 100%;
-    margin: 20px 0px
+    margin-bottom:20px;
   }
 }
 
