--- a/css/style.css
+++ b/css/style.css
@@ -140,14 +140,14 @@ h5 {
 
 @media screen and (min-width: 1200px) {
   .container-menu {
-    width: 1200px;
+    width: 1400px;
   }
 
   ul.topnav {
     transition-duration: 0.6s;
     display: block !important;
     height: 0px;
-        overflow: hidden;
+    overflow: hidden;
   }
 }
 
@@ -169,10 +169,10 @@ h5 {
     opacity: 1;
   }
   .animation-text-first {
-    font-size: 25px !important;
+    font-size: 28px !important;
   }
   .animation-text-second {
-    font-size: 15px !important;
+    font-size: 18px !important;
     padding: 0 10% !important;
   }
   .container-margin {
@@ -699,13 +699,16 @@ ul.topnav li a {
 ## What makes us diffrent ?
 --------------------------------------------------------------*/
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 768px) {
 
-.different-img {
-  display: none;
+
+  .different-img {
+    display: none;
+  }
+
+
 }
 
-}
 
 .different-img {
   min-height: 300px;
